--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!--Row 3 Banner Chart-->
         <tr>
           <td valign="top" bgcolor="#ffffff" class="banner">
-           <div id='highcharts-amybupy'><script src='//cloud.highcharts.com/inject/amybupy/1' defer='defer'></script></div>
+          <div id='highcharts-uguzygy'><script src='//cloud.highcharts.com/inject/uguzygy' defer='defer'></script></div>
           </td>
         </tr>
         <!--Row 4 Content Text-->
