--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <html>
 	<body bgcolor="f5f5f5">
-    <!--Inbox Preview Text-->
-    <div style="font-size: 1px; color: #f5f5f5; display: none;">Find out what's new in the Washington County economy!</div>
     
     <!--This is the full width of the email-->
     <table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#f5f5f5">
@@ -13,7 +11,7 @@
       <!--This is the main email content container-->
       <tr>
         <td>
-      <table class="container" width="564" align="center" border="0" cellpadding="0" cellspacing="0">
+      <table class="container" width="5000" align="center" border="0" cellpadding="0" cellspacing="0">
         <!--Row 1 Logo-->
         <tr>
           <td valign="top" class="logo" bgcolor="#ffffff" style="padding: 30px 10px 10px 10px;">
@@ -25,8 +23,8 @@
           <td valign="top" class="headline" bgcolor="#ffffff" style="padding: 18px 10px 18px 10px; font-family: Arial, Helvetica, sans-serif; font-size: 18px; line-height: 18px;">
             <!--Divider Bar-->
             <hr color="#eaeaea">
-            <center><h1 style="margin: 30px 0px 0px 0px; font-weight: bold; font-size: 26px; color: #000000;">Washington County Economic Indicators</h1>
-              <br>June 2017</center>
+            <center><h1 style="margin: 30px 0px 0px 0px; font-weight: bold; font-size: 26px; color: #000000;">Tigard Quick Facts</h1>
+              <br>Updated July 2017</center>
           </td>
         </tr>
         <!--Row 3 Banner Chart-->
